[gd_scene load_steps=6 format=2]

[ext_resource path="res://tools/loopin/loopin.gd" type="Script" id=1]
[ext_resource path="res://tools/loopin/player/song_list.gd" type="Script" id=2]
[ext_resource path="res://tools/loopin/player/end_mode_list.gd" type="Script" id=3]
[ext_resource path="res://tools/loopin/player/loopin_module.gd" type="Script" id=4]
[ext_resource path="res://tools/theming/custom_label.gd" type="Script" id=6]

[node name="loopin_module" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loopin_server" type="Node" parent="."]
script = ExtResource( 1 )
end_mode = 1
separation_length = 0.0
fedeout_length = 3.0

[node name="h_split_container" type="HSplitContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0
split_offset = 1000

[node name="v_split_container" type="VSplitContainer" parent="h_split_container"]
margin_right = 1014.0
margin_bottom = 1066.0
split_offset = 650

[node name="panel_container" type="PanelContainer" parent="h_split_container/v_split_container"]
margin_right = 1014.0
margin_bottom = 664.0

[node name="panel" type="Panel" parent="h_split_container/v_split_container/panel_container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1007.0
margin_bottom = 657.0

[node name="divisions" type="VBoxContainer" parent="h_split_container/v_split_container/panel_container/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="h_split_container" type="HSplitContainer" parent="h_split_container/v_split_container/panel_container/panel/divisions"]
margin_right = 1000.0
margin_bottom = 236.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
split_offset = 150
__meta__ = {
"_edit_use_anchors_": false
}

[node name="control" type="Control" parent="h_split_container/v_split_container/panel_container/panel/divisions/h_split_container"]
margin_right = 150.0
margin_bottom = 236.0

[node name="playback_time" type="Label" parent="h_split_container/v_split_container/panel_container/panel/divisions/h_split_container/control" groups=[
"playback_time",
]]
anchor_right = 1.0
anchor_bottom = 0.5
text = "0.15416"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="state_color" type="ColorRect" parent="h_split_container/v_split_container/panel_container/panel/divisions/h_split_container/control"]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="state_label" type="Label" parent="h_split_container/v_split_container/panel_container/panel/divisions/h_split_container/control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
text = "Stopped"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="title" type="Control" parent="h_split_container/v_split_container/panel_container/panel/divisions/h_split_container"]
margin_left = 162.0
margin_right = 1000.0
margin_bottom = 236.0
script = ExtResource( 6 )
text = "(song title)"
label_type = "huge"

[node name="control" type="Control" parent="h_split_container/v_split_container/panel_container/panel/divisions"]
margin_top = 240.0
margin_right = 1000.0
margin_bottom = 318.0
size_flags_vertical = 3

[node name="list" type="MenuButton" parent="h_split_container/v_split_container/panel_container/panel/divisions/control"]
anchor_right = 0.75
anchor_bottom = 1.0
text = "PLAY"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stop_button" type="Button" parent="h_split_container/v_split_container/panel_container/panel/divisions/control"]
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
text = "STOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="control2" type="Control" parent="h_split_container/v_split_container/panel_container/panel/divisions"]
margin_top = 322.0
margin_right = 1000.0
margin_bottom = 400.0
size_flags_vertical = 3

[node name="label" type="Label" parent="h_split_container/v_split_container/panel_container/panel/divisions/control2"]
anchor_right = 0.25
anchor_bottom = 1.0
text = "End Mode:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end_mode_box" type="Control" parent="h_split_container/v_split_container/panel_container/panel/divisions/control2"]
anchor_left = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="h_split_container/v_split_container/panel_container/panel/divisions/control2/end_mode_box"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.717647, 0.717647, 0.717647, 0.14902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" type="MenuButton" parent="h_split_container/v_split_container/panel_container/panel/divisions/control2/end_mode_box"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Use song end"
items = [ "Use song end", null, 0, false, false, 0, 0, null, "", false, "Always fede-out", null, 0, false, false, 1, 0, null, "", false, "Always sudden", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="separation_length" type="HBoxContainer" parent="h_split_container/v_split_container/panel_container/panel/divisions"]
margin_top = 404.0
margin_right = 1000.0
margin_bottom = 482.0
size_flags_vertical = 3

[node name="label" type="Label" parent="h_split_container/v_split_container/panel_container/panel/divisions/separation_length"]
margin_right = 248.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
text = "Separation:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="h_slider" type="HSlider" parent="h_split_container/v_split_container/panel_container/panel/divisions/separation_length"]
margin_left = 252.0
margin_right = 872.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 5.0
max_value = 10.0
step = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="h_split_container/v_split_container/panel_container/panel/divisions/separation_length"]
margin_left = 876.0
margin_right = 1000.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0.0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fedeout_length" type="HBoxContainer" parent="h_split_container/v_split_container/panel_container/panel/divisions"]
margin_top = 486.0
margin_right = 1000.0
margin_bottom = 564.0
size_flags_vertical = 3

[node name="label" type="Label" parent="h_split_container/v_split_container/panel_container/panel/divisions/fedeout_length"]
margin_right = 248.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
text = "Fede-out:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="h_slider" type="HSlider" parent="h_split_container/v_split_container/panel_container/panel/divisions/fedeout_length"]
margin_left = 252.0
margin_right = 872.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 5.0
max_value = 10.0
step = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="h_split_container/v_split_container/panel_container/panel/divisions/fedeout_length"]
margin_left = 876.0
margin_right = 1000.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0.0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="afterfinal_length" type="HBoxContainer" parent="h_split_container/v_split_container/panel_container/panel/divisions"]
margin_top = 568.0
margin_right = 1000.0
margin_bottom = 650.0
size_flags_vertical = 3

[node name="label" type="Label" parent="h_split_container/v_split_container/panel_container/panel/divisions/afterfinal_length"]
margin_right = 248.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
text = "After final:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="h_slider" type="HSlider" parent="h_split_container/v_split_container/panel_container/panel/divisions/afterfinal_length"]
margin_left = 252.0
margin_right = 872.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 5.0
max_value = 10.0
step = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="h_split_container/v_split_container/panel_container/panel/divisions/afterfinal_length"]
margin_left = 876.0
margin_right = 1000.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0.0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="control" type="Control" parent="h_split_container/v_split_container"]
margin_top = 676.0
margin_right = 1014.0
margin_bottom = 1066.0

[node name="color_rect" type="ColorRect" parent="h_split_container/v_split_container/control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.698039, 0.741176, 0.137255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="control" type="Control" parent="h_split_container"]
margin_left = 1026.0
margin_right = 1906.0
margin_bottom = 1066.0
[connection signal="pressed" from="h_split_container/v_split_container/panel_container/panel/divisions/control/stop_button" to="." method="_on_stop_button_pressed"]
